<resources>
    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">ORDER</string>
    <string name="email_subject">Just Java order for\u0020</string>
    <string name="order_summary">Order Summary</string>
    <string name="add">add\u0020</string>
    <string name="total">total</string>
    <string name="thank_you">thank you!</string>
    <string name="more_than_100_toast">Sorry, You can not order more than 100 cups of coffee</string>
    <string name="less_than_1_toast">Sorry, You can not order less than 1 cups of coffee</string>
</resources>
