<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity" >

    <LinearLayout
        android:id="@+id/primary_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:inputType="textCapWords"
            android:hint="@string/name"
            android:backgroundTint="#0D47A1"/>

        <TextView
            style="@style/basic_style"
            android:text="@string/toppings"
            android:textAllCaps="true" />

        <CheckBox
            android:id="@+id/whipped_cream_check_box"
            style="@style/basic_style"
            android:layout_marginTop="16dp"
            android:paddingLeft="24dp"
            android:textSize="16sp"
            android:text="@string/whipped_cream"/>

        <CheckBox
            android:id="@+id/chocolate_check_box"
            style="@style/basic_style"
            android:layout_marginBottom="16dp"
            android:paddingLeft="24dp"
            android:textSize="16sp"
            android:text="@string/chocolate"/>

        <TextView
            style="@style/basic_style"
            android:text="@string/quantity"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrementQuantity"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="1"
                android:textColor="@android:color/black" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="incrementQuantity"
                android:text="+" />

        </LinearLayout>

        <Button
            style="@style/basic_style"
            android:onClick="submitOrder"
            android:text="@string/order" />

    </LinearLayout>

</ScrollView>



